--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.41",
-    "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/react-redux": "^7.1.25",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +42,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/redux-mock-store": "^1.0.3",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "redux-mock-store": "^1.5.4",
+    "tailwindcss": "^3.3.3"
   }
 }
