--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,9 +14,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    "paths": {
+      "components/*": ["./components/*"],
+      "layouts/*": ["./components/layouts/*"],
+      "shared/*": ["./components/shared/*"],
+      "styles/*": ["./styles/*"],
+      "pages/*": ["./pages/*"],
+      "interfaces/*": ["./interfaces/*"],
+      "store/*": ["./store/*"]
+    }
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src/**/*", "**/*.ts", "**/*.tsx", "webpack.config.js", "babel.config.js", "__mocks__"],
+  "exclude": ["node_modules"]
 }
